# rag-ecommerce-agent

./: .env.example  .gitignore  .mcp.json  BRANCH_UPGRADE_REPORT.md  CLAUDE.md  HANDOFF_DB_EXPAND.md  Makefile  README.md  build.gradle.kts  client  deploy.ps1  deploy.sh  gradlew  gradlew.bat  settings.gradle.kts  start.bat  start_backend.sh  课题说明会：基于 RAG 的多模态电商智能导购 AI Agent.docx
01-开发规约/: 开发规约-v2.md  (+1 more)
apps/backend/: .dockerignore  .env  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  run_eval_v2.py  start.bat
apps/backend/app/: main.py  startup.py
apps/backend/app/api/: __init__.py  audio.py  cart.py  chat.py  compare.py  evaluation.py  favorites.py  feedback.py  footprints.py  knowledge.py  order.py  products.py  review.py  upload.py  user.py  voice.py
apps/backend/app/core/: config.py  database.py  exceptions.py  security.py
apps/backend/data/: products.json
apps/backend/scripts/: benchmark_ttft.py  download_product_images.py  image_validator.py  import_expanded_to_pg.py  map_dataset_to_productrecord.py  run_eval.py  run_eval_ci.py  run_eval_quick.py  run_p3_test.py  seed_data.py  sync_mock_from_dataset.py  verify_m3.py
apps/backend/tests/: __init__.py  conftest.py  e2e_scenarios.sh  test_agent.py  test_audio_status.py  test_cart_nlp.py  test_category_guard.py  test_chat.py  test_evaluation.py  test_feedback.py  test_health.py  test_intent.py  test_interleaved_cards.py  test_negation_extraction.py  test_product_ranker.py  test_products.py  test_rag.py  test_sse.py  test_state_slots.py  test_vision_status.py  test_voice.py
(+462 files in other folders)
