[project]
name = "rag-ecommerce-agent"
version = "0.1.0"
description = "基于 RAG 的多模态电商 AI 导购系统"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.18",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "openai>=1.0.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "llama-index>=0.11.0",
    "llama-index-vector-stores-qdrant>=0.4.0",
    "llama-index-embeddings-huggingface>=0.5.0",
    "sentence-transformers>=3.0.0",
    "qdrant-client>=1.12.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "alembic>=1.14.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
